--- a/about.html
+++ b/about.html
@@ -31,6 +31,8 @@
 
   <!-- MY CSS  -->
   <link rel="stylesheet" href="./asset/style.css" />
+  <link rel="stylesheet" href="./asset/respon.css">
+
 
   <style>
     /* PAGE INTRO */
@@ -387,33 +389,36 @@
     </div>
   </section>
   <section class="about section__inner">
-    <div class="container">
-      <div class="about__content row">
-        <div class="about__left col-lg-5 pl-lg-4">
-          <div class="title tex-left mb-2">
-            <h6 class="sub-title">ABOUT US</h6>
-            <h3>We Have 10+ Years Of Experience.</h3>
-            <h4>Let Us Take Care Of Your Pets!</h4>
+    <div class="content__main py-5">
+      <div class="container py-lg-5">
+        <div class="about__content row">
+          <div class="about__left col-lg-5 pl-lg-4">
+            <div class="title tex-left mb-2">
+              <h6 class="sub-title">ABOUT US</h6>
+              <h3>We Have 10+ Years Of Experience.</h3>
+              <h4>Let Us Take Care Of Your Pets!</h4>
+            </div>
           </div>
-        </div>
-        <div class="about__right col-lg-7 pl-lg-4 pl-lg-5 mt-lg-0 mt-md-5 mt-4">
-          <p>
-            Lorem ipsum dolor sit amet,Ea consequuntur .Ea consequuntur illum
-            facere aperiam sequi optio consectetur adipisicing elitFuga,
-            suscipit totam animi consequatur saepe blanditiis
-          </p>
-          <p class="mt-3 mb-3">
-            Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam
-            sequi optio consectetur adipisicing elit. Fuga, suscipit totam
-            animi consequatur saepe blanditiis.
-          </p>
-          <a class="read" href="#">Read More</a>
+          <div class="about__right col-lg-7 pl-lg-4 pl-lg-5 mt-lg-0 mt-md-5 mt-4">
+            <p>
+              Lorem ipsum dolor sit amet,Ea consequuntur .Ea consequuntur illum
+              facere aperiam sequi optio consectetur adipisicing elitFuga,
+              suscipit totam animi consequatur saepe blanditiis
+            </p>
+            <p class="mt-3 mb-3">
+              Lorem ipsum dolor sit amet,Ea consequuntur illum facere aperiam
+              sequi optio consectetur adipisicing elit. Fuga, suscipit totam
+              animi consequatur saepe blanditiis.
+            </p>
+            <a class="read" href="#">Read More</a>
+          </div>
         </div>
       </div>
     </div>
+    
   </section>
   <section class="history section__inner">
-    <div class="history__feature pd-50">
+    <div class="history__feature py-5">
       <div class="container py-lg-5">
         <div class="history__content py-lg-3">
           <div class="title ">
@@ -660,7 +665,7 @@
   </section>
   <footer class="footer">
     <div class="footer-bg-layer">
-      <div class="container">
+      <div class="container py-lg-3">
         <div class="row footer-top">
           <div class="col-lg-6 col-md-5 footer-list mt-5">
             <h6 class="footer-title">Contact information</h6>
@@ -712,7 +717,7 @@
 
             </div>
           </div>
-          <div class="col-lg-6 col-md-7">
+          <div class="footer__item col-lg-6 col-md-7">
             <div class="row">
               <div class="col-sm-4 col-6 footer-list mt-5">
                 <h6 class="footer-title">Company</h6>
