--- a/index.html
+++ b/index.html
@@ -93,57 +93,6 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   </nav>
 </header>
 <!-- CAROUSEL  -->
-<!-- <section class="poochCarousel">
-
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="./asset/img/banner1.jpg" class="d-block w-100" alt="">
-      <div class="poochCarousel__caption1 carousel-caption d-none d-md-block text-left">
-        <h1>Quality Things For Loving pets</h1>
-        <p>Keeps Your Pets Smiling.</p>
-        <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
-        <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./asset/img/banner2.jpg" class="d-block w-100" alt="">
-      <div class="poochCarousel__caption2 carousel-caption d-none d-md-block text-left">
-        <h1>Dilivering Happiness For Pets</h1>
-        <p>For The Love Of Pets</p>
-        <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
-        <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./asset/img/banner3.jpg" class="d-block w-100" alt="">
-      <div class="poochCarousel__caption3 carousel-caption d-none d-md-block text-left">
-        <h1>Quality Things For Loving pets</h1>
-        <p>Keeps Your Pets Smiling.</p>
-        <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
-        <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="./asset/img/banner4.jpg" class="d-block w-100" alt="">
-      <div class="poochCarousel__caption4 carousel-caption d-none d-md-block text-left">
-        <h1>Quality Things For Loving pets</h1>
-        <p>Keeps Your Pets Smiling.</p>
-        <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
-        <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-
-<!-- demo -->
 <section class="poochCarousel">
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -156,16 +105,19 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="./asset/img/banner1.jpg" class="d-block w-100" alt="...">
-        <div class="poochCarousel__caption1 carousel-caption d-none d-md-block text-left">
-          <h1>Quality Things For Loving pets</h1>
-          <p>Keeps Your Pets Smiling.</p>
-          <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
-          <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
+        <div class="container">
+          <div class="poochCarousel__caption1 carousel-caption d-block d-md-block text-left">
+            <h1>Quality Things For Loving pets</h1>
+            <p>Keeps Your Pets Smiling.</p>
+            <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
+            <a class="btn2 btn btn-outline-light btn-lg " href="">Contact Us</a>
+          </div>
         </div>
+        
       </div>
       <div class="carousel-item">
         <img src="./asset/img/banner2.jpg" class="d-block w-100" alt="...">
-        <div class="poochCarousel__caption2 carousel-caption d-none d-md-block text-left">
+        <div class="poochCarousel__caption2 carousel-caption d-block d-md-block text-left">
           <h1>Dilivering Happiness For Pets</h1>
           <p>For The Love Of Pets</p>
           <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
@@ -174,7 +126,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       </div>
       <div class="carousel-item">
         <img src="./asset/img/banner3.jpg" class="d-block w-100" alt="...">
-        <div class="poochCarousel__caption3 carousel-caption d-none d-md-block text-left">
+        <div class="poochCarousel__caption3 carousel-caption d-block d-md-block text-left">
           <h1>Quality Things For Loving pets</h1>
           <p>Keeps Your Pets Smiling.</p>
           <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
@@ -183,7 +135,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       </div>
       <div class="carousel-item">
         <img src="./asset/img/banner4.jpg" class="d-block w-100" alt="...">
-        <div class="poochCarousel__caption4 carousel-caption d-none d-md-block text-left">
+        <div class="poochCarousel__caption4 carousel-caption d-block d-md-block text-left">
           <h1>Quality Things For Loving pets</h1>
           <p>Keeps Your Pets Smiling.</p>
           <a class=" btn1 btn btn-light btn-lg " href="">Read More</a>
@@ -227,7 +179,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-snowflake"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Dog Walking</h5></a> 
+              <h5><a href="#" class="card-title">Dog Walking</a></h5>
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
@@ -239,7 +191,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-utensils"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Healthy Meals</h5></a> 
+              <h5><a href="#" class="card-title">Healthy Meals</a> </h5>
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
@@ -251,7 +203,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-hands"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Pet Sitting</h5></a> 
+              <h5><a href="#" class="card-title">Pet Sitting</a></h5>
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
@@ -263,7 +215,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-sitemap"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Dog Activities</h5></a> 
+              <a href="#" class="card-title">Dog Activities</a> 
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
@@ -275,7 +227,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-shower"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Pet Daycare</h5></a> 
+              <a href="#" class="card-title">Pet Daycare</a> 
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
@@ -287,7 +239,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               <i class="fa-solid fa-user-doctor"></i>
             </div>
             <div class="box-body">
-              <a href="#"><h5 class="card-title">Pet Grooming</h5></a> 
+              <a href="#" class="card-title">Pet Grooming</h5></a> 
               <p class="card-text">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed doloramet laoreet. Lorem ipsum dolor sit amet Ut blandit eu leo.</p>
               <a class="read" href="#">Read More</a>
             </div>
