--- a/contact.html
+++ b/contact.html
@@ -288,7 +288,7 @@
       font-weight: normal;
       font-size: 16px;
       line-height: 28px;
-      color: #696969 margin-bottom: 0;
+      color: #696969; margin-bottom: 0;
     }
 
     .footer .copy-footer a {
