--- a/contact.html
+++ b/contact.html
@@ -130,7 +130,7 @@
         width: 100%;
         font-size: 16px;
         color: #252b33;
-        -webkit-appearance: none;
+        /* -webkit-appearance: none; */
         padding: 0px 16px;
         border: 1px solid rgba(147, 107, 232, 0.05);
         background: rgba(147, 107, 232, 0.05);
