--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./asset/style.css">
     <link rel="stylesheet" href="./asset/respon.css">
 </head>
-<body>
+<body id="myBody">
 
   <header class="header__pooch">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -76,7 +76,13 @@
             <a class="nav-link">Contact</a>
           </li>
           <li class="nav-item">
-            <!-- icon  -->
+            <div class="container">
+              <div >
+                <button class="btn" id="switchButton"  title="Click to switch theme">
+                  <i class="fa-regular fa-moon"></i>
+                  <i class="fa-regular fa-sun"></i>
+                </button>
+          </div>
           </li>
   
         </ul>
