--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
       <div class="collapse navbar-collapse" id="poochNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="gallery.html">Gallery</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="blog.html">
               <span>Blog</span>
               <i class="fa-solid fa-chevron-down"></i>
             </a>
@@ -76,8 +76,8 @@
             </div> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link">Contact</a>
-          </li>
+            <a class="nav-link" href="contact.html"  >Contact</a>
+          </li> 
           <li class="nav-item">
             <div class="container">
               <div>
