--- a/contact.html
+++ b/contact.html
@@ -407,6 +407,29 @@
     .dark .contact-grid form input, .dark .contact-grid form textarea{
       background-color: #222 !important;
     }
+    .backToTop {
+    width: 60px;
+    height: 60px;
+    background: #189A46;
+    border-radius: 8px;
+    line-height: 60px;
+    text-align: center;
+    display: block;
+    position: fixed;
+    right: 25px;
+    bottom: 100px;
+    color: #fff;
+    transition: all .2s;
+
+    opacity: 0;
+    overflow: hidden;
+    border-radius: 50px;
+    transition: 0.3s ease-out;
+  }
+  .cd-top--is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
     </style>
   </head>
   <body id="myBody">
@@ -711,8 +734,12 @@
       </div>
     </footer>
 
-
-
+    <a href="#" class="backToTop cd-top text-replace js-cd-top">
+      <i class="fa fa-arrow-up"></i>
+    </a>
+    <!-- BACK TO TOP JS -->
+ <script src="./asset/js/main.js"></script>
+ <script src="./asset/js/util.js"></script>
     <script>
       document.getElementById("switchButton").onclick = function () {
         document.getElementById("myBody").classList.toggle("dark");
