--- a/index.html
+++ b/index.html
@@ -466,8 +466,11 @@
         </form>
       </div>
     </div>
-  </section>
+  </section>  
 
+  <a href="#" class="backToTop cd-top text-replace js-cd-top">
+    <i class="fa fa-arrow-up"></i>
+  </a>
 
 
 
@@ -505,6 +508,11 @@
     });
   </script>
 
+
+ <!-- BACK TO TOP JS -->
+ <script src="./asset/js/main.js"></script>
+ <script src="./asset/js/util.js"></script>
+ 
   <!-- JS BS 4 -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
