--- a/blog.html
+++ b/blog.html
@@ -478,7 +478,29 @@
       color: white;  
       background-color: #189A46;
     }
+    .backToTop {
+    width: 60px;
+    height: 60px;
+    background: #189A46;
+    border-radius: 8px;
+    line-height: 60px;
+    text-align: center;
+    display: block;
+    position: fixed;
+    right: 25px;
+    bottom: 100px;
+    color: #fff;
+    transition: all .2s;
 
+    opacity: 0;
+    overflow: hidden;
+    border-radius: 50px;
+    transition: 0.3s ease-out;
+  }
+  .cd-top--is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
     </style>
 </head>
 <body id="myBody">
@@ -950,6 +972,9 @@
         </div>
       </footer>
 
+      <a href="#" class="backToTop cd-top text-replace js-cd-top">
+        <i class="fa fa-arrow-up"></i>
+      </a>
 
 
     <script>
@@ -957,7 +982,9 @@
             document.getElementById("myBody").classList.toggle("dark");
         };
     </script>
-
+    <!-- BACK TO TOP JS -->
+    <script src="./asset/js/main.js"></script>
+    <script src="./asset/js/util.js"></script>
     <!-- JS BS 4 -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
