fixx sangtoi 2 phan sau

--- a/blog.html
+++ b/blog.html
@@ -366,11 +366,17 @@
             margin-left: 20px;
             margin-right: 20px;
         }
+        .page-container{
+          padding: 0 20px;
+        }
     }
     @media  (max-width :740px ) {
       .card{
         margin: 0 40px;
       }
+      .page-container{
+          padding: 0 40px;
+        }
     }
 
     #myBody{
@@ -471,6 +477,7 @@
         line-height: 28px;
         padding: 0;
     }
+
     .dark .bg-light {
       background-color:#151515  !important;
       }
