--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="card-item mg-50 border-card">
           <div class="card-top bg-g cl-w">
             <h5>Save 10% </h5>
-            <h6>Standard Package</h6>
+            <h6 class="cl-w">Standard Package</h6>
             <h4 class="cl-w"><label>$</label>39<span class="cl-w">/month</span></h4>
           </div>
           <div class="card-bot">
