--- a/services.html
+++ b/services.html
@@ -495,6 +495,9 @@
         line-height: 28px;
         padding: 0;
     }
+    .dark .bg-light {
+  background-color: #151515 !important;
+}
     .backToTop {
     width: 60px;
     height: 60px;
