--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <a class="nav-link" href="contact.html"  >Contact</a>
           </li> 
           <li class="nav-item">
-            <div class="container">
+            <div class="container btn-sun-moon">
               <div>
-                <button class="btn" id="switchButton" title="Click to switch theme">
+                <button class="btn " id="switchButton" title="Click to switch theme">
                   <i class="fa-regular fa-moon"></i>
                   <i class="fa-regular fa-sun"></i>
                 </button>
