--- a/gallery.html
+++ b/gallery.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./asset/lightbox2-2.11.3/dist/css/lightbox.css">
 
+    <link rel="stylesheet" href="./asset/respon.css">
     <style>
 
 
