--- a/services.html
+++ b/services.html
@@ -140,6 +140,11 @@
 #poochNavbar  .nav-link:hover::after {
     width: 100%;
 }
+@media (max-width:991px ){
+  #poochNavbar .nav-link:hover::after {
+      width: 0 ;
+  }
+}
 #poochNavbar  .nav-link:hover {
     color: #189a46;
 }
