--- a/gallery.html
+++ b/gallery.html
@@ -159,6 +159,12 @@
 #poochNavbar  .nav-link:hover::after {
     width: 100%;
 }
+@media (max-width:991px) {
+  #poochNavbar  .nav-link:hover::after {
+    width: 0;
+}
+  
+}
 #poochNavbar  .nav-link:hover {
     color: #189a46;
 }
