--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izimodal/1.6.1/js/iziModal.min.js">
+ 
   <!-- BS 4 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -394,15 +394,26 @@
           <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit.Lorem ipsum dolor sit amet elit consec
             tetur adipisi elit. <br>
             Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo officia.</p>
+        </div>  
+
+        <img class="img-fluid" src="./asset/img/banner2.jpg" >
+        <a href="#test-popup" class="open-popup-link text-center position-absolute">Show inline popup
+          <span class=" video-play-icon "><span class="fa fa-play"></span></span>
+        </a> 
+        <div id="test-popup" class="white-popup mfp-hide">
+          <iframe src="https://player.vimeo.com/video/101587706"></iframe>
         </div>
-        <div class="video-sub-content mg-t-50">
-          <div class="position-relative">
-            <img class="" src="./asset/img/banner2.jpg" alt=""> 
-            <a  href="https://player.vimeo.com/video/101587706" class="trigger text-center position-absolute" >
-              <span class=" video-play-icon "><span class="trigger fa fa-play"></span></span>
+        <!-- <div class="video-sub-content mg-t-50">   
+          <div id="test-popup" class=" position-relative">
+            <img class="img-fluid " src="./asset/img/banner2.jpg" > 
+            <a  href="#test-popup" class=" open-popup-link text-center position-absolute" >
+              <span class=" video-play-icon "><span class="fa fa-play"></span></span>
             </a>
+            <div href="#test-popup" class="dis-none white-popup mfp-hide">
+              <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -625,15 +636,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
     integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- <script>
-    $(document).ready(function () {
-      $('.open-popup-link').magnificPopup({ type: 'inline' });
-    });
-  </script> -->
   <script>
-    $(document).on('click', '.trigger', function (event) {
-    event.preventDefault();
-    $('#modal').iziModal('open',event); 
+    $('.open-popup-link').magnificPopup({
+      type:'inline',
+      midClick: true 
     });
   </script>
 
