da fix respon contact

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 
   <!-- MY CSS  -->
   <link rel="stylesheet" href="./asset/style.css" />
-  <link rel="stylesheet" href="./asset/respon.css">
+  <link rel="stylesheet" href="./asset/respon.css"/>
 
 
   <style>
@@ -576,21 +576,24 @@
       <h2 class="navbar-brand">
         <a href="index.html">Pooch Care</a>
       </h2>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#poochNavbar"
-        aria-controls="poochNavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#poochNavbar"
+        aria-controls="poochNavbar"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
-
       </button>
-       <!-- <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-        <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-        
-    </button> -->
 
       <div class="collapse navbar-collapse" id="poochNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html"
+              >Home <span class="sr-only">(current)</span></a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -607,101 +610,30 @@
               <i class="fa-solid fa-chevron-down"></i>
             </a>
 
-
             <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Blog posts</a>
-              <a class="dropdown-item" href="#">Blog Single</a>
-              <a class="dropdown-item" href="#">Landing page</a>
-            </div> -->
+                  Blog
+                </a>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Blog posts</a>
+                  <a class="dropdown-item" href="#">Blog Single</a>
+                  <a class="dropdown-item" href="#">Landing page</a>
+                </div> -->
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html"  >Contact</a>
-          </li> 
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
           <li class="nav-item">
             <div class="container">
-              <div>
-                <button class="btn" id="switchButton" title="Click to switch theme">
-                  <i class="fa-regular fa-moon"></i>
-                  <i class="fa-regular fa-sun"></i>
-                </button>
-              </div>
+                <div >
+                  <button class="btn" id="switchButton"  title="Click to switch theme">
+                    <i class="fa-regular fa-moon"></i>
+                    <i class="fa-regular fa-sun"></i>
+                  </button>
+            </div>
           </li>
-
         </ul>
-
       </div>
-    </nav> 
-
-   
-  </header><header class="header__pooch">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <h2 class="navbar-brand">
-        <a href="index.html">Pooch Care</a>
-
-      </h2>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#poochNavbar"
-        aria-controls="poochNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-
-      </button>
-       <!-- <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-        <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-        
-    </button> -->
-
-      <div class="collapse navbar-collapse" id="poochNavbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="gallery.html">Gallery</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link" href="blog.html">
-              <span>Blog</span>
-              <i class="fa-solid fa-chevron-down"></i>
-            </a>
-
-
-            <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Blog
-            </a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Blog posts</a>
-              <a class="dropdown-item" href="#">Blog Single</a>
-              <a class="dropdown-item" href="#">Landing page</a>
-            </div> -->
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html"  >Contact</a>
-          </li> 
-          <li class="nav-item">
-            <div class="container">
-              <div>
-                <button class="btn" id="switchButton" title="Click to switch theme">
-                  <i class="fa-regular fa-moon"></i>
-                  <i class="fa-regular fa-sun"></i>
-                </button>
-              </div>
-          </li>
-
-        </ul>
-
-      </div>
-    </nav> 
-
-   
+    </nav>
   </header>
   <section class="page-intro">
     <div class="breadcrumb-bg breadcrumb-bg-about py-sm-5 py-4">
