--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
     integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
- 
+
   <!-- BS 4 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -386,7 +386,7 @@
   <!-- End Plan -->
   <!-- Video -->
   <section class="video">
-    <div class="new-block">
+    <div class="video-container">
       <div class="video-content  container  ">
         <div class="title-video ">
           <h6 class="title-top"> Better pet nutrition.</h6>
@@ -396,25 +396,16 @@
             Lorem ipsum dolor sit amet elit consec tetur adipisi elit. Iure voluptatibus explicabo officia.</p>
         </div>  
 
-        <img class="img-fluid" src="./asset/img/banner2.jpg" >
-        <a href="#test-popup" class="open-popup-link text-center position-absolute">Show inline popup
-          <span class=" video-play-icon "><span class="fa fa-play"></span></span>
-        </a> 
-        <div id="test-popup" class="white-popup mfp-hide">
-          <iframe src="https://player.vimeo.com/video/101587706"></iframe>
-        </div>
-        <!-- <div class="video-sub-content mg-t-50">   
-          <div id="test-popup" class=" position-relative">
-            <img class="img-fluid " src="./asset/img/banner2.jpg" > 
-            <a  href="#test-popup" class=" open-popup-link text-center position-absolute" >
-              <span class=" video-play-icon "><span class="fa fa-play"></span></span>
+        <div class="video-sub-content mg-t-50 position-relative">
+            <img src="./asset/img/banner2.jpg" alt="video-popup">
+            <a href="https://player.vimeo.com/video/101587706"  class="popup-vimeo text-center position-absolute" >
+              <span class="video-play-icon">
+                  <span class="fa fa-play"></span>
+              </span>
             </a>
-            <div href="#test-popup" class="dis-none white-popup mfp-hide">
-              <iframe src="https://player.vimeo.com/video/101587706"  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div> -->
-      </div>
+          
+        </div>
+      </div>  
     </div>
   </section>
   <!-- End Video -->
@@ -616,6 +607,7 @@
     };
   </script>
   <!-- jQuery -->
+  <script src="./asset/js/jquery.countup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -633,15 +625,21 @@
   </script>
 
   <!-- video -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
-    integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
-    $('.open-popup-link').magnificPopup({
-      type:'inline',
-      midClick: true 
-    });
+    $(document).ready(function() {
+	$('.popup-youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
+		disableOn: 700,
+		type: 'iframe',
+		mainClass: 'mfp-fade',
+		removalDelay: 160,
+		preloader: false,
+
+		fixedContentPos: false
+	});
+});
   </script>
+  
+
 
  <!-- BACK TO TOP JS -->
  <script src="./asset/js/main.js"></script>
